--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,6 @@
     </main>
     </div>
 
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/main.js') }}"></script> -->
 </body>
 </html>
