Heredando plantillas HTML (DRY)

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,44 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamentos de Flask</title>
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css') }}">
-</head>
-<body>
-    <!-- menu -->
-    <div class="container">
-        <nav class="menu">
-            <img src="{{ url_for('static', filename='imgs/flask.png') }}" alt="flask" width="75" height="75">
-            <ul class="menu-links">
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Nosotros</a></li>
-                <li><a href="">Ingresar</a></li>
-                <li><a href="">Registrarse</a></li>
-            </ul>
-        </nav>
+{% extends 'base.html' %}
 
-        {% with messages = get_flashed_messages(with_categories=True) %}
-            {% if messages %}
-                <ul class="messages">
-                    {% for category,message in messages %}
-                        <li class="{{ category }}">{{ message }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
-
-        <main>
-            <form method="POST">
-                <h3>Ingresa tus datos</h3>
-                    <input type="text" name="username" /> <br /> <br />
-                    <input type="password" name="password" /> <br /> <br />
-                    <button type="submit">Enviar</button>
-            </form>
-        </main>
-    </div>
-</body>
-</html>
+{% block content %}
+    <form method="POST">
+        <h3>Ingresa tus datos</h3>
+            <input type="text" name="username" /> <br /> <br />
+            <input type="password" name="password" /> <br /> <br />
+        <button type="submit">Enviar</button>
+    </form>
+{% endblock content %}
