Agregando estilos a nuestros formularios Flask-WTF

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -119,7 +119,7 @@ form button:hover {
 /* FORMS */
 .input-form {
     background-color:rgb(92, 124, 231);
-    color: #fff;
+    color: #ffff;
     border: none;
     outline: none;
 }
